--- a/index.html
+++ b/index.html
@@ -23,7 +23,25 @@
         section {
             padding: 40px 20px;
         }
+        header {
+            background: linear-gradient(to right, #4facfe, #00f2fe);
+            color: white;
+            text-align: center;
+            padding: 50px 20px;
+        }
 
+        header h1 {
+            font-size: 36px;
+            font-weight: 700;
+            text-transform: uppercase;
+        }
+
+        header p {
+            font-size: 18px;
+            font-weight: 300;
+            margin-top: 10px;
+            display: block; /* display property */
+        }
     </style>
 </head>
 <body>
