styling the profile section

--- a/index.html
+++ b/index.html
@@ -40,8 +40,35 @@
             font-size: 18px;
             font-weight: 300;
             margin-top: 10px;
-            display: block; /* display property */
+            display: block; 
         }
+        .profile {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 30px;
+            max-width: 1000px;
+            margin: auto;
+        }
+
+        .profile img {
+            width: 200px;
+            height: 200px;
+            border-radius: 50%;
+            object-fit: cover;
+            display: inline-block; 
+        }
+
+        .bio {
+            max-width: 500px;
+            display: block; 
+        }
+
+        .bio h2 {
+            margin-bottom: 10px;
+            font-size: 24px;
+        }
+
     </style>
 </head>
 <body>
