--- a/index.html
+++ b/index.html
@@ -68,7 +68,32 @@
             margin-bottom: 10px;
             font-size: 24px;
         }
+        .skills-section {
+            background-color: #ffffff;
+        }
 
+        .skills-section h2 {
+            text-align: center;
+            margin-bottom: 30px;
+            text-transform: capitalize;
+        }
+
+        .skills-grid {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 20px;
+            max-width: 1000px;
+            margin: auto;
+        }
+
+        .skill-card {
+            background-color: #4facfe;
+            color: white;
+            padding: 25px;
+            text-align: center;
+            font-weight: 500;
+            border-radius: 8px;
+        }
     </style>
 </head>
 <body>
