styling the contact us section

--- a/index.html
+++ b/index.html
@@ -94,6 +94,42 @@
             font-weight: 500;
             border-radius: 8px;
         }
+        .contact {
+            max-width: 600px;
+            margin: auto;
+        }
+
+        .contact h2 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        form {
+            display: block;
+        }
+
+        input, textarea {
+            width: 100%;
+            padding: 12px;
+            margin-bottom: 15px;
+            font-family: inherit;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        button {
+            padding: 12px 25px;
+            background-color: #4facfe;
+            color: white;
+            border: none;
+            cursor: pointer;
+            font-weight: 500;
+            display: inline; /* display property */
+        }
+
+        button:hover {
+            background-color: #00c6fb;
+        }
+
     </style>
 </head>
 <body>
