--- a/index.html
+++ b/index.html
@@ -123,13 +123,35 @@
             border: none;
             cursor: pointer;
             font-weight: 500;
-            display: inline; /* display property */
+            display: inline; 
         }
 
         button:hover {
             background-color: #00c6fb;
         }
+        footer {
+            background-color: #222;
+            color: white;
+            text-align: center;
+            padding: 15px;
+            font-size: 14px;
+        }
 
+        @media (max-width: 768px) {
+
+            .profile {
+                flex-direction: column;
+                text-align: center;
+            }
+
+            .skills-grid {
+                grid-template-columns: 1fr;
+            }
+
+            header h1 {
+                font-size: 28px;
+            }
+        }
     </style>
 </head>
 <body>
